force-app/main/default/objects/POC__c/POC__c.object-meta.xml
<CustomObject>
            <description>Tracks proof-of-concept (POC) engagements with prospective or existing customers. Each record captures the POC type, duration, timeline, health, next steps, and lifecycle stage, and is linked to an Account and optionally a primary Opportunity. Supports standard Tasks for day-to-day follow-up.</description>
            <label>POC</label>
            <nameField>
                <label>POC Name</label>
                <type>Text</type>
            </nameField>
            <pluralLabel>POCs</pluralLabel>
            <sharingModel>ReadWrite</sharingModel>
        </CustomObject>