force-app/main/default/objects/POC__c/fields/Account__c.field-meta.xml
<CustomField>
            <fullName>Account__c</fullName>
            <label>Account</label>
            <description>Required lookup to the Account this POC engagement is tied to. Every POC must be linked to exactly one Account.</description>
            <type>Lookup</type>
            <inlineHelpText>Select the customer Account this POC engagement is being run for.</inlineHelpText>
            <required>true</required>
            <referenceTo>Account</referenceTo>
            <relationshipLabel>POCs</relationshipLabel>
            <relationshipName>POC</relationshipName>
            <deleteConstraint>Restrict</deleteConstraint>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>