force-app/main/default/objects/POC__c/fields/End_Date__c.field-meta.xml
<CustomField>
            <fullName>End_Date__c</fullName>
            <label>End Date</label>
            <description>The date the POC is expected to end, or actually ended.</description>
            <type>Date</type>
            <inlineHelpText>The expected end date while the POC runs; update it to the actual date once it closes.</inlineHelpText>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>