force-app/main/default/objects/POC__c/fields/Health__c.field-meta.xml
<CustomField>
            <fullName>Health__c</fullName>
            <label>Health</label>
            <description>Overall health of the POC engagement, letting owners flag at-risk engagements at a glance.</description>
            <type>Picklist</type>
            <inlineHelpText>Healthy is on track, Needs Attention requires follow-up, and Unhealthy is at risk. Leave blank until the POC is assessed.</inlineHelpText>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>Green</fullName>
                        <label>Healthy</label>
                    </value>
                    
                    <value>
                        <fullName>Yellow</fullName>
                        <label>Needs Attention</label>
                    </value>
                    
                    <value>
                        <fullName>Red</fullName>
                        <label>Unhealthy</label>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>