force-app/main/default/objects/POC__c/fields/Length__c.field-meta.xml
<CustomField>
            <fullName>Length__c</fullName>
            <label>Length</label>
            <description>The intended duration of the POC as agreed with the customer, independent of the actual Start and End Dates.</description>
            <type>Picklist</type>
            <inlineHelpText>The duration agreed with the customer. Use Other if none of the standard durations fit.</inlineHelpText>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>2 Weeks</fullName>
                    </value>
                    
                    <value>
                        <fullName>1 Month</fullName>
                    </value>
                    
                    <value>
                        <fullName>6 Weeks</fullName>
                    </value>
                    
                    <value>
                        <fullName>2 Months</fullName>
                    </value>
                    
                    <value>
                        <fullName>3 Months</fullName>
                    </value>
                    
                    <value>
                        <fullName>Other</fullName>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>