force-app/main/default/objects/POC__c/fields/Lifecycle_Status__c.field-meta.xml
<CustomField>
            <fullName>Lifecycle_Status__c</fullName>
            <label>Lifecycle Status</label>
            <description>The current stage of the POC engagement. Drives the native Kanban board columns.</description>
            <type>Picklist</type>
            <inlineHelpText>Move this forward as the engagement progresses — it drives which Kanban column the POC appears in.</inlineHelpText>
            <required>true</required>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>Pre-POC</fullName>
                        <default>true</default>
                        <label>Pre-POC</label>
                    </value>
                    
                    <value>
                        <fullName>Active</fullName>
                    </value>
                    
                    <value>
                        <fullName>Extended</fullName>
                    </value>
                    
                    <value>
                        <fullName>Paused</fullName>
                    </value>
                    
                    <value>
                        <fullName>Complete</fullName>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>