force-app/main/default/objects/POC__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
            <fullName>Next_Steps__c</fullName>
            <label>Next Steps</label>
            <description>Free-text notes on next steps or actions for this POC engagement.</description>
            <inlineHelpText>Keep a short running note of upcoming actions. Use Tasks for items that need an owner and a due date.</inlineHelpText>
            <type>LongTextArea</type>
            <length>32768</length>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>

        </CustomField>