force-app/main/default/objects/POC__c/fields/POC_Type__c.field-meta.xml
<CustomField>
            <fullName>POC_Type__c</fullName>
            <label>POC Type</label>
            <description>Indicates whether this is a paid or unpaid POC engagement.</description>
            <type>Picklist</type>
            <inlineHelpText>Select Paid if the customer is being invoiced for this POC, otherwise Un-Paid.</inlineHelpText>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
            
            <valueSet>
                <restricted>true</restricted>
                <valueSetDefinition>
                    
                    <value>
                        <fullName>Paid</fullName>
                    </value>
                    
                    <value>
                        <fullName>Un-Paid</fullName>
                    </value>
                    
                </valueSetDefinition>
            </valueSet>
        </CustomField>