force-app/main/default/objects/POC__c/fields/Primary_Opportunity__c.field-meta.xml
<CustomField>
            <fullName>Primary_Opportunity__c</fullName>
            <label>Primary Opportunity</label>
            <description>Optional lookup to the Opportunity this POC supports. When populated, must belong to the same Account as this POC.</description>
            <type>Lookup</type>
            <inlineHelpText>Optional. Select the deal this POC supports — it must sit on the same Account as this POC.</inlineHelpText>
            <referenceTo>Opportunity</referenceTo>
            <relationshipLabel>POCs</relationshipLabel>
            <relationshipName>POC</relationshipName>
            <deleteConstraint>SetNull</deleteConstraint>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>