force-app/main/default/objects/POC__c/fields/Start_Date__c.field-meta.xml
<CustomField>
            <fullName>Start_Date__c</fullName>
            <label>Start Date</label>
            <description>The date the POC begins.</description>
            <type>Date</type>
            <inlineHelpText>The date the POC actually begins, which may differ from the agreed Length.</inlineHelpText>
            
            <!-- Field Level Security - Visible and Editable for all profiles by default -->
            <complianceGroup>None</complianceGroup>
        </CustomField>