force-app/main/default/objects/POC__c/validationRules/Opportunity_Account_Match.validationRule-meta.xml
<ValidationRule>
            <fullName>Opportunity_Account_Match</fullName>
            <active>true</active>
            <description>Blocks save when Primary_Opportunity__c is populated and its Account does not match Account__c.</description>
            <errorConditionFormula>NOT(ISBLANK(Primary_Opportunity__c)) &amp;&amp; Primary_Opportunity__r.AccountId &lt;&gt; Account__c</errorConditionFormula>
            <errorDisplayField>Primary_Opportunity__c</errorDisplayField>
            <errorMessage>The selected Opportunity belongs to a different Account. Please select an Opportunity on the same Account as this POC.</errorMessage>
        </ValidationRule>