force-app/main/default/objects/POC__c/listViews/All_POCs.listView-meta.xml
<ListView>
            <fullName>All_POCs</fullName>
            <label>All POCs</label>
            <filterScope>Everything</filterScope>
            
            <columns>NAME</columns>
            
            <columns>Account__c</columns>
            
            <columns>Primary_Opportunity__c</columns>
            
            <columns>Lifecycle_Status__c</columns>
            
            <columns>Health__c</columns>
            
            <columns>OWNER.ALIAS</columns>
            
            <columns>Start_Date__c</columns>
            
            <columns>End_Date__c</columns>
            
        </ListView>