force-app/main/default/objects/POC__c/listViews/My_POCs.listView-meta.xml
<ListView>
            <fullName>My_POCs</fullName>
            <label>My POCs</label>
            <filterScope>Mine</filterScope>
            
            <columns>NAME</columns>
            
            <columns>Account__c</columns>
            
            <columns>Lifecycle_Status__c</columns>
            
            <columns>Health__c</columns>
            
            <columns>Start_Date__c</columns>
            
            <columns>End_Date__c</columns>
            
        </ListView>