force-app/main/default/objects/POC__c/listViews/POCs_Missing_Opportunity.listView-meta.xml
<ListView>
            <fullName>POCs_Missing_Opportunity</fullName>
            <label>POCs Missing an Opportunity</label>
            <filterScope>Everything</filterScope>
            
            <columns>NAME</columns>
            
            <columns>Account__c</columns>
            
            <columns>Lifecycle_Status__c</columns>
            
            <columns>OWNER.ALIAS</columns>
            
            <columns>Start_Date__c</columns>

            <filters>
                <field>Primary_Opportunity__c</field>
                <operation>equals</operation>
                <value></value>
            </filters>

        </ListView>